--- a/css/custom.css
+++ b/css/custom.css
@@ -18,6 +18,11 @@
 	margin-top: -20px;
 	margin-left: -4px;
 }
+#wantToRateAnything {
+	padding-left: 10px;
+	font-size: 0.8em;
+	margin-bottom: -10px;
+}
 #logo3-container {
 	width: 100%;
 	min-height: 30px;
@@ -595,8 +600,8 @@ background: repeating-linear-gradient(
 	display: none;
 }
 #starCounter {
-	font-size: 1.3em;
-	font-weight: 700;
+	font-size: 2.0em;
+	font-weight: 800;
 	color: orange;
 	position: absolute;
 	z-index: 100;
@@ -605,22 +610,22 @@ background: repeating-linear-gradient(
 .starRating {
 	display: -webkit-flex;
 	-webkit-flex-direction: row;
-	-webkit-justify-content: space-around;
+	-webkit-justify-content: space-between;
 /*	border: 5px solid red;*/
   	unicode-bidi: bidi-override;
   	direction: rtl;
   	height: 30%;
-  	width: 94%;
+  	width: 80%;
   	position: relative;
 	z-index: 5;
-	margin: -6% 0px 0px 0px;
+	margin: -3.5% 2% 0px 0px;
 	padding: 0px 0px 0px 0px;
 	float: right;
 	color: white;
-	font-size: 1.3em;
+	font-size: 2.0em;
     text-shadow: 5px 5px 5px #ccc;
 /*    overflow: hidden;*/
-/*   	border: 4px solid blue;*/
+   	border: 4px solid blue;
 }
 .star:hover {
 	color: yellow;	
@@ -991,7 +996,12 @@ a:active {
 	position: absolute;
 	z-index: 100;
 	margin: -40px 0px 0px 10px;
-}	
+}
+#wantToRateAnything {
+	padding-left: 35px;
+	font-size: 1.2em;
+	margin-bottom: -10px;
+}
 #logo3 {
 	font-size: 5.0em;
 	font-weight: 900;
@@ -1103,7 +1113,7 @@ margin-right: -2%;
 	font-weight: 900;
 }
 #logo3-container {
-	margin-left: 10%;
+	margin-left: 4.5%;
 /*	border: 2px solid red;*/
 }
 #logo3trademark {
