--- a/css/custom.css
+++ b/css/custom.css
@@ -606,6 +606,7 @@ background: repeating-linear-gradient(
 	position: absolute;
 	z-index: 100;
 	margin: -25px 0px 0px 5px;
+	display: none;
 }
 .starRating {
 	display: -webkit-flex;
@@ -625,7 +626,7 @@ background: repeating-linear-gradient(
 	font-size: 2.0em;
     text-shadow: 5px 5px 5px #ccc;
 /*    overflow: hidden;*/
-   	border: 4px solid blue;
+   	/*border: 4px solid blue;*/
 }
 .star:hover {
 	color: yellow;	
